--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.1",
     "mysql2": "^3.9.8",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
